responsive frontend added

--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -69,7 +69,7 @@
 	<section class="main" id="top">
 		<div class="container">
 			<div id="cta">
-				<a href="javascript:" class="btn btn-primary rounded">Start forming your dream team</a>
+				<a href= {% url 'analyse' %} class="btn btn-primary rounded">Get Started Here with our analysis</a>
 				<p>Behind every kick of the ball, there has to be a thought.</p>
 			</div>
 			<div class="row" >
