--- a/Home/templates/compare.html
+++ b/Home/templates/compare.html
@@ -1,3 +1,50 @@
+<style>
+input, select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input:focus {
+    background-color: lightblue;
+}
+
+#box{
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: 50%;
+    margin: 0 auto;
+
+}
+
+.btn {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.effect:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: box-shadow 0.4s ease-in-out;
+}
+
+label {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+</style>
+
+
+<div id="box" class="effect">
 <form class="alb" action="" method="post">
     {% csrf_token %}
     {% for field in form %}
